# nourical-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_routes.py  analytics_routes.py  app.py  auth_routes.py  config.py  device_routes.py  goals_routes.py  models.py  nutrition_routes.py  preferences_routes.py  preferences_routes_new.py  pyproject.toml
repositories/: __init__.py  daily_streak_repository.py  food_log_repository.py  food_to_avoid_repository.py  meal_plan_repository.py  meal_time_repository.py  notification_preferences_repository.py  onboarding_repository.py  user_device_repository.py  user_repository.py  user_targets_repository.py  weight_log_repository.py
services/: __init__.py  ai_suggestion_service.py  analytics_service.py  auth_service.py  firebase_service.py  goals_service.py  nutrition_service.py  preferences_service.py
static/css/: style.css
templates/: about.html  index.html
templates/email/: otp_verification.html
utils/: __init__.py  jwt_utils.py
